# safeSave

./: CMakeLists.txt  LICENSE  README.md
demo/: main.cpp  test.cpp  test7
include/: safeSave.h
src/: safeSave.cpp
